JumpScript/tests/baselines/reference/decoratorOnInterface.errors.txt
tests/cases/conformance/decorators/invalid/decoratorOnInterface.jump(3,1): error TS1206: Decorators are not valid here.


==== tests/cases/conformance/decorators/invalid/decoratorOnInterface.jump (1 errors) ====
    declare function dec<T>(target: T): T;
    
    @dec
    ~
!!! error TS1206: Decorators are not valid here.
    interface I {
    }